// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A runtime pipeline goldens (4f F1) > golden: cancellation before dispatch halts with partial write > cancel-execution-result 1`] = `
{
  "artifact_generation_realization": "semantic_mock",
  "degraded_lens_ids": [],
  "deliberation_execution_results": [],
  "deliberation_status": "not_performed",
  "error_log_path": "<root0>/error-log.md",
  "excluded_lens_ids": [
    "logic",
    "coverage",
  ],
  "executed_lens_count": 0,
  "execution_completed_at": "<ts>",
  "execution_realization": "direct-call",
  "execution_started_at": "<ts>",
  "execution_status": "halted_partial",
  "halt_lens_id": null,
  "halt_phase": "cancellation",
  "halt_reason": "Review cancelled by MCP request: golden cancel scenario",
  "halt_unit_id": null,
  "halt_unit_kind": null,
  "host_runtime": "openai",
  "issue_artifact_execution_results": [],
  "lens_completion_barrier_ref": "<root0>/lens-completion-barrier.yaml",
  "lens_execution_results": [],
  "max_concurrent_lenses": 2,
  "observed_dispatch_width": 2,
  "participating_lens_ids": [],
  "planned_lens_ids": [
    "logic",
    "coverage",
  ],
  "retry_policy": {
    "deliberation_max_retries": 2,
    "issue_artifact_max_retries": 2,
    "lens_max_retries": 2,
    "retry_initial_delay_ms": 3000,
    "salvage": {
      "delta_completion": "unit_llm",
      "enabled": false,
    },
    "synthesis_max_retries": 2,
  },
  "review_mode": "core-axis",
  "semantic_quality_evidence": {
    "applicability": "real_semantic_path_only",
    "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
    "status": "not_applicable",
  },
  "session_id": "<session-id>",
  "session_root": "<root0>",
  "synthesis_executed": false,
  "synthesize_execution_result": null,
  "total_duration_ms": "<volatile>",
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: cancellation before dispatch halts with partial write > cancel-result 1`] = `
{
  "degraded_lens_ids": [],
  "error_log_path": "<root0>/error-log.md",
  "executed_lens_count": 0,
  "halt_lens_id": null,
  "halt_phase": "cancellation",
  "halt_reason": "Review cancelled by MCP request: golden cancel scenario",
  "halt_unit_id": null,
  "halt_unit_kind": null,
  "participating_lens_ids": [],
  "session_root": "<root0>",
  "synthesis_executed": false,
  "synthesis_output_path": "<root0>/synthesis.md",
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: failing lens blocks the barrier and halts downstream > barrier-halt-degradation-summary 1`] = `
{
  "created_at": "<ts>",
  "degradation_kinds": [
    "lens_degradation",
    "halted_partial",
    "unit_failure",
  ],
  "degraded_lens_ids": [
    "coverage",
  ],
  "excluded_lens_ids": [],
  "execution_status": "halted_partial",
  "failed_units": [
    {
      "failure_kind": "executor_exit",
      "failure_message": "golden stub forced failure for coverage",
      "lens_id": "coverage",
      "output_path": "<root0>/round1/coverage.md",
      "packet_path": "<root0>/prompt-packets/coverage.prompt.md",
      "unit_id": "coverage",
      "unit_kind": "lens",
    },
  ],
  "halt_lens_id": null,
  "halt_phase": "lens_completion_barrier",
  "halt_reason": "Selected lens completion barrier failed: 1/2 planned lenses completed.",
  "halt_unit_id": null,
  "halt_unit_kind": null,
  "schema_version": "1",
  "session_id": "<session-id>",
  "source_error_log_ref": "<root0>/error-log.md",
  "source_execution_result_ref": "<root0>/execution-result.yaml",
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: failing lens blocks the barrier and halts downstream > barrier-halt-execution-result 1`] = `
{
  "artifact_generation_realization": "semantic_mock",
  "degraded_lens_ids": [
    "coverage",
  ],
  "deliberation_execution_results": [],
  "deliberation_status": "not_performed",
  "error_log_path": "<root0>/error-log.md",
  "excluded_lens_ids": [],
  "executed_lens_count": 1,
  "execution_completed_at": "<ts>",
  "execution_realization": "direct-call",
  "execution_started_at": "<ts>",
  "execution_status": "halted_partial",
  "halt_lens_id": null,
  "halt_phase": "lens_completion_barrier",
  "halt_reason": "Selected lens completion barrier failed: 1/2 planned lenses completed.",
  "halt_unit_id": null,
  "halt_unit_kind": null,
  "host_runtime": "openai",
  "issue_artifact_execution_results": [],
  "lens_completion_barrier_ref": "<root0>/lens-completion-barrier.yaml",
  "lens_execution_results": [
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/round1/logic.md",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/logic.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "logic",
      "unit_kind": "lens",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 3,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": "executor_exit",
      "failure_message": "golden stub forced failure for coverage",
      "output_bytes": null,
      "output_path": "<root0>/round1/coverage.md",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/coverage.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "failed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "coverage",
      "unit_kind": "lens",
    },
  ],
  "max_concurrent_lenses": 2,
  "observed_dispatch_width": 2,
  "participating_lens_ids": [
    "logic",
  ],
  "planned_lens_ids": [
    "logic",
    "coverage",
  ],
  "retry_policy": {
    "deliberation_max_retries": 2,
    "issue_artifact_max_retries": 2,
    "lens_max_retries": 2,
    "retry_initial_delay_ms": 3000,
    "salvage": {
      "delta_completion": "unit_llm",
      "enabled": false,
    },
    "synthesis_max_retries": 2,
  },
  "review_mode": "core-axis",
  "semantic_quality_evidence": {
    "applicability": "real_semantic_path_only",
    "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
    "status": "not_applicable",
  },
  "session_id": "<session-id>",
  "session_root": "<root0>",
  "synthesis_executed": false,
  "synthesize_execution_result": null,
  "total_duration_ms": "<volatile>",
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: failing lens blocks the barrier and halts downstream > barrier-halt-result 1`] = `
{
  "degraded_lens_ids": [
    "coverage",
  ],
  "error_log_path": "<root0>/error-log.md",
  "executed_lens_count": 1,
  "halt_lens_id": null,
  "halt_phase": "lens_completion_barrier",
  "halt_reason": "Selected lens completion barrier failed: 1/2 planned lenses completed.",
  "halt_unit_id": null,
  "halt_unit_kind": null,
  "participating_lens_ids": [
    "logic",
  ],
  "session_root": "<root0>",
  "synthesis_executed": false,
  "synthesis_output_path": "<root0>/synthesis.md",
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: full pipeline completes (empty-pipeline mock) > happy-degradation-summary 1`] = `"(absent)"`;

exports[`A runtime pipeline goldens (4f F1) > golden: full pipeline completes (empty-pipeline mock) > happy-execution-result 1`] = `
{
  "artifact_generation_realization": "semantic_mock",
  "degraded_lens_ids": [],
  "deliberation_execution_results": [
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 0,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/deliberation-resolution.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/teamlead.deliberation.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "controlled-deliberation",
      "unit_kind": "deliberation",
    },
  ],
  "deliberation_status": "performed",
  "error_log_path": "<root0>/error-log.md",
  "excluded_lens_ids": [],
  "executed_lens_count": 2,
  "execution_completed_at": "<ts>",
  "execution_realization": "direct-call",
  "execution_started_at": "<ts>",
  "execution_status": "completed",
  "halt_reason": null,
  "host_runtime": "openai",
  "issue_artifact_execution_results": [
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/finding-ledger.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/finding-ledger.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "finding-ledger",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/finding-relation-graph.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/finding-relation-graph.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "finding-relation-graph",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/issue-ledger.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/issue-ledger.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "issue-ledger",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": 2,
      "child_results": [
        {
          "artifact_generation_realization": "semantic_mock",
          "attempt_count": 1,
          "completed_at": "<ts>",
          "duration_ms": "<volatile>",
          "failure_kind": null,
          "failure_message": null,
          "output_bytes": "<volatile>",
          "output_path": "<root0>/stance-responses/logic.yaml",
          "packet_bytes": "<volatile>",
          "packet_path": "<root0>/prompt-packets/issue-stance/logic.prompt.md",
          "semantic_quality_evidence": {
            "applicability": "real_semantic_path_only",
            "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
            "status": "not_applicable",
          },
          "started_at": "<ts>",
          "status": "completed",
          "timestamp_provenance": "runner_wallclock",
          "unit_id": "issue-stance:logic",
          "unit_kind": "issue_artifact",
        },
        {
          "artifact_generation_realization": "semantic_mock",
          "attempt_count": 1,
          "completed_at": "<ts>",
          "duration_ms": "<volatile>",
          "failure_kind": null,
          "failure_message": null,
          "output_bytes": "<volatile>",
          "output_path": "<root0>/stance-responses/coverage.yaml",
          "packet_bytes": "<volatile>",
          "packet_path": "<root0>/prompt-packets/issue-stance/coverage.prompt.md",
          "semantic_quality_evidence": {
            "applicability": "real_semantic_path_only",
            "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
            "status": "not_applicable",
          },
          "started_at": "<ts>",
          "status": "completed",
          "timestamp_provenance": "runner_wallclock",
          "unit_id": "issue-stance:coverage",
          "unit_kind": "issue_artifact",
        },
      ],
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/issue-stance-matrix.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/issue-stance-matrix.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "issue-stance-matrix",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/deliberation-plan.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/deliberation-plan.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "deliberation-plan",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/problem-framing.yaml",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/problem-framing.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "problem-framing",
      "unit_kind": "issue_artifact",
    },
  ],
  "lens_completion_barrier_ref": "<root0>/lens-completion-barrier.yaml",
  "lens_execution_results": [
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/round1/logic.md",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/logic.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "logic",
      "unit_kind": "lens",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "failure_kind": null,
      "failure_message": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/round1/coverage.md",
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/coverage.prompt.md",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "unit_id": "coverage",
      "unit_kind": "lens",
    },
  ],
  "max_concurrent_lenses": 2,
  "observed_dispatch_width": 2,
  "participating_lens_ids": [
    "logic",
    "coverage",
  ],
  "planned_lens_ids": [
    "logic",
    "coverage",
  ],
  "retry_policy": {
    "deliberation_max_retries": 2,
    "issue_artifact_max_retries": 2,
    "lens_max_retries": 2,
    "retry_initial_delay_ms": 3000,
    "salvage": {
      "delta_completion": "unit_llm",
      "enabled": false,
    },
    "synthesis_max_retries": 2,
  },
  "review_mode": "core-axis",
  "semantic_quality_evidence": {
    "applicability": "real_semantic_path_only",
    "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
    "status": "not_applicable",
  },
  "session_id": "<session-id>",
  "session_root": "<root0>",
  "synthesis_executed": true,
  "synthesize_execution_result": {
    "artifact_generation_realization": "semantic_mock",
    "attempt_count": 0,
    "child_result_count": 0,
    "child_results": [],
    "completed_at": "<ts>",
    "duration_ms": "<volatile>",
    "failure_kind": null,
    "failure_message": null,
    "output_bytes": "<volatile>",
    "output_path": "<root0>/synthesis-ledger.yaml",
    "packet_bytes": "<volatile>",
    "packet_path": "<root0>/synthesis-work-items.yaml",
    "semantic_quality_evidence": {
      "applicability": "real_semantic_path_only",
      "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
      "status": "not_applicable",
    },
    "started_at": "<ts>",
    "status": "completed",
    "timestamp_provenance": "runner_wallclock",
    "unit_id": "synthesize",
    "unit_kind": "synthesize",
  },
  "total_duration_ms": "<volatile>",
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: full pipeline completes (empty-pipeline mock) > happy-manifest 1`] = `
{
  "artifact_generation_realization": "semantic_mock",
  "artifact_refs": {
    "actor_consumer_bindings": "<root0>/execution-preparation/actor-consumer-bindings.yaml",
    "actor_invocation_profiles": "<root0>/execution-preparation/actor-invocation-profiles.yaml",
    "binding": "<root0>/binding.yaml",
    "degradation_summary": null,
    "deliberation_output": "<root0>/deliberation.md",
    "deliberation_resolution": "<root0>/deliberation-resolution.yaml",
    "domain_binding": "<root0>/execution-preparation/domain-binding.yaml",
    "execution_plan": "<root0>/execution-plan.yaml",
    "execution_result": "<root0>/execution-result.yaml",
    "final_output": "<root0>/final-output.md",
    "finding_ledger": "<root0>/finding-ledger.yaml",
    "finding_relation_graph": "<root0>/finding-relation-graph.yaml",
    "interpretation": "<root0>/interpretation.yaml",
    "issue_ledger": "<root0>/issue-ledger.yaml",
    "issue_stance_matrix": "<root0>/issue-stance-matrix.yaml",
    "lens_completion_barrier": "<root0>/lens-completion-barrier.yaml",
    "problem_framing": "<root0>/problem-framing.yaml",
    "review_context_manifest": "<root0>/execution-preparation/review-context-manifest.yaml",
    "review_record": "<root0>/review-record.yaml",
    "review_target_profile": "<root0>/execution-preparation/review-target-profile.yaml",
    "review_value_alignment_criteria": "<root0>/execution-preparation/review-value-alignment-criteria.yaml",
    "session_metadata": "<root0>/session-metadata.yaml",
    "synthesis_ledger": "<root0>/synthesis-ledger.yaml",
    "synthesis_output": "<root0>/synthesis.md",
    "synthesis_work_items": "<root0>/synthesis-work-items.yaml",
  },
  "created_at": "<ts>",
  "effective_retry_policy": {
    "deliberation_max_retries": 2,
    "issue_artifact_max_retries": 2,
    "lens_max_retries": 2,
    "retry_initial_delay_ms": 3000,
    "salvage": {
      "delta_completion": "unit_llm",
      "enabled": false,
    },
    "synthesis_max_retries": 2,
  },
  "execution_contract": {
    "duplicate_dispatch_policy": "session_id_collision_blocks",
    "execution_step_ids": [
      "manifest_validation",
      "lens_dispatch",
      "lens_completion_barrier",
      "finding_ledger",
      "finding_relation_graph",
      "issue_ledger",
      "issue_stance_matrix",
      "deliberation_plan",
      "lens_deliberation_responses",
      "controlled_deliberation",
      "problem_framing",
      "synthesize",
    ],
    "idempotency_key": "<session-id>",
    "idempotency_scope": "session_id",
    "progress_total_steps": 12,
    "resume_token": "<hash>",
    "resume_token_ref": "<hash>",
    "schema_version": "1",
  },
  "halt": null,
  "review_execution_profile": null,
  "schema_version": "1",
  "semantic_quality_evidence": {
    "applicability": "real_semantic_path_only",
    "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
    "status": "not_applicable",
  },
  "session_id": "<session-id>",
  "synthesis_provenance": {
    "degraded_lens_ids": [],
    "deliberation_output_path": "<root0>/deliberation.md",
    "deliberation_output_sha256": "<hash>",
    "deliberation_status": "performed",
    "issue_artifact_refs": {
      "deliberation_plan": "<root0>/deliberation-plan.yaml",
      "finding_ledger": "<root0>/finding-ledger.yaml",
      "finding_relation_graph": "<root0>/finding-relation-graph.yaml",
      "issue_ledger": "<root0>/issue-ledger.yaml",
      "issue_stance_matrix": "<root0>/issue-stance-matrix.yaml",
      "problem_framing": "<root0>/problem-framing.yaml",
    },
    "lens_completion_barrier_ref": "<root0>/lens-completion-barrier.yaml",
    "observed_dispatch_width": 2,
    "participating_lens_ids": [
      "logic",
      "coverage",
    ],
    "synthesis_executed": true,
    "synthesis_ledger_path": "<root0>/synthesis-ledger.yaml",
    "synthesis_ledger_sha256": "<hash>",
    "synthesis_output_path": "<root0>/synthesis.md",
    "synthesis_output_sha256": "<hash>",
    "synthesis_work_items_path": "<root0>/synthesis-work-items.yaml",
    "synthesis_work_items_sha256": "<hash>",
  },
  "worker_units": [
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/round1/logic.md",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/logic.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "logic",
      "unit_kind": "lens",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/round1/coverage.md",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/coverage.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "coverage",
      "unit_kind": "lens",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/finding-ledger.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/finding-ledger.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "finding-ledger",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/finding-relation-graph.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/finding-relation-graph.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "finding-relation-graph",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/issue-ledger.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/issue-ledger.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "issue-ledger",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": 2,
      "child_results": [
        {
          "artifact_generation_realization": "semantic_mock",
          "attempt_count": 1,
          "completed_at": "<ts>",
          "duration_ms": "<volatile>",
          "failure_kind": null,
          "failure_message": null,
          "output_bytes": "<volatile>",
          "output_path": "<root0>/stance-responses/logic.yaml",
          "packet_bytes": "<volatile>",
          "packet_path": "<root0>/prompt-packets/issue-stance/logic.prompt.md",
          "semantic_quality_evidence": {
            "applicability": "real_semantic_path_only",
            "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
            "status": "not_applicable",
          },
          "started_at": "<ts>",
          "status": "completed",
          "timestamp_provenance": "runner_wallclock",
          "unit_id": "issue-stance:logic",
          "unit_kind": "issue_artifact",
        },
        {
          "artifact_generation_realization": "semantic_mock",
          "attempt_count": 1,
          "completed_at": "<ts>",
          "duration_ms": "<volatile>",
          "failure_kind": null,
          "failure_message": null,
          "output_bytes": "<volatile>",
          "output_path": "<root0>/stance-responses/coverage.yaml",
          "packet_bytes": "<volatile>",
          "packet_path": "<root0>/prompt-packets/issue-stance/coverage.prompt.md",
          "semantic_quality_evidence": {
            "applicability": "real_semantic_path_only",
            "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
            "status": "not_applicable",
          },
          "started_at": "<ts>",
          "status": "completed",
          "timestamp_provenance": "runner_wallclock",
          "unit_id": "issue-stance:coverage",
          "unit_kind": "issue_artifact",
        },
      ],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/issue-stance-matrix.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/issue-stance-matrix.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "issue-stance-matrix",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/stance-responses/logic.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/issue-stance/logic.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "issue-stance:logic",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/stance-responses/coverage.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/issue-stance/coverage.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "issue-stance:coverage",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/deliberation-plan.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/deliberation-plan.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "deliberation-plan",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 1,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/problem-framing.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/problem-framing.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "problem-framing",
      "unit_kind": "issue_artifact",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 0,
      "child_result_count": null,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "worker",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/deliberation-resolution.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/prompt-packets/teamlead.deliberation.prompt.md",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "controlled-deliberation",
      "unit_kind": "deliberation",
    },
    {
      "artifact_generation_realization": "semantic_mock",
      "attempt_count": 0,
      "child_result_count": 0,
      "child_results": [],
      "citation_audit": null,
      "citation_audit_rejection": null,
      "completed_at": "<ts>",
      "duration_ms": "<volatile>",
      "execution_scope": "runtime_aggregate",
      "executor_host_runtime": null,
      "executor_tool_mode": null,
      "failure_kind": null,
      "failure_message": null,
      "input_tokens": null,
      "model_id": null,
      "native_admission": null,
      "output_bytes": "<volatile>",
      "output_path": "<root0>/synthesis-ledger.yaml",
      "output_sha256": "<hash>",
      "output_tokens": null,
      "packet_bytes": "<volatile>",
      "packet_path": "<root0>/synthesis-work-items.yaml",
      "packet_sha256": "<hash>",
      "semantic_quality_evidence": {
        "applicability": "real_semantic_path_only",
        "reason": "semantic mock verifies wiring and artifact contracts; it does not evaluate product semantic quality",
        "status": "not_applicable",
      },
      "started_at": "<ts>",
      "status": "completed",
      "timestamp_provenance": "runner_wallclock",
      "tool_boundary_skips": null,
      "tool_calls": null,
      "tool_iterations": null,
      "unit_id": "synthesize",
      "unit_kind": "synthesize",
    },
  ],
}
`;

exports[`A runtime pipeline goldens (4f F1) > golden: full pipeline completes (empty-pipeline mock) > happy-result 1`] = `
{
  "degraded_lens_ids": [],
  "error_log_path": "<root0>/error-log.md",
  "executed_lens_count": 2,
  "participating_lens_ids": [
    "logic",
    "coverage",
  ],
  "session_root": "<root0>",
  "synthesis_executed": true,
  "synthesis_output_path": "<root0>/synthesis.md",
}
`;
